--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,71 @@
 # This file is used by pip to install required python packages
 # Usage: pip install -r requirements.txt
 
+asn1crypto==0.24.0
+beautifulsoup4==4.6.0
+certifi==2019.9.11
+chardet==3.0.4
+Click==7.0
+configparser==4.0.2
+contextlib2==0.6.0.post1
+coverage==4.5.4
+crcmod==1.7
+cryptography==2.1.4
+defer==1.0.6
+Django==1.11.24
+enum34==1.1.6
+filelock==3.0.12
+flake8==3.6.0
+flake8-polyfill==1.0.2
 Flask==1.1.1
 Flask-HTTPAuth==3.3.0
+html5lib==0.999999999
+idna==2.8
+importlib-metadata==0.23
+ipaddress==1.0.17
+itsdangerous==1.1.0
+Jinja2==2.11.1
+keyring==10.6.0
+keyrings.alt==3.0
+lxml==4.2.1
+MarkupSafe==1.1.1
+mccabe==0.6.1
+more-itertools==5.0.0
+numpy==1.16.6
+packaging==19.2
+pathlib2==2.3.5
+pep8-naming==0.7.0
+pickle-mixin==1.0.2
+pluggy==0.13.0
+py==1.8.0
+pycairo==1.16.2
+pycodestyle==2.4.0
+pycrypto==2.6.1
+pyflakes==2.0.0
+pygobject==3.26.1
 PyMySQL==0.9.3
-xmltodict==0.12.0
+pyparsing==2.4.5
+python-apt==1.6.4
+python-debian==0.1.32
+pytz==2019.2
+pyxdg==0.25
+requests==2.22.0
+scandir==1.10.0
 scikit-learn==0.20.4
 scipy==1.2.3
+scream==0.0.34
+SecretStorage==2.3.1
+six==1.13.0
+toml==0.10.0
+tox==3.13.2
+trimage==1.0.2
+ubuntu-cleaner==1.0.4
+urllib3==1.25.3
+vboxapi==1.0
+virtualenv==16.7.7
+webencodings==0.5
+Werkzeug==1.0.0
+wxPython==3.0.2.0
+wxPython-common==3.0.2.0
+xmltodict==0.12.0
+zipp==0.6.0
