--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@
 configparser==4.0.2
 Flask==1.1.1
 Flask-HTTPAuth==3.3.0
+gunicorn==19.10.0
 importlib-metadata==0.23
 numpy==1.16.6
 py==1.8.0
 pycrypto==2.6.1
 PyMySQL==0.9.3
+python-decouple==3.3
 requests==2.22.0
 scikit-learn==0.20.4
 scipy==1.2.3
