--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ importlib-metadata==0.23
 numpy==1.16.6
 py==1.8.0
 pycrypto==2.6.1
+pandas==0.24.2
 PyMySQL==0.9.3
 python-decouple==3.3
 requests==2.22.0
